<resources>
    <string name="app_name">Sin aliento</string>
    <string name="save_pattern_text">Guardar patrón</string>
    <string name="pattern_alert_text">
        Se requiere definir un patrón de desbloqueo a continuación.\n\n
        Es necesario recordarlo ya que será solicitado al ingresar a la aplicación para asegurar una mayor seguridad.\n\n
        En caso de olvidarlo, es posible desinstalar y volver a instalar la aplicación para establecer uno nuevo.
    </string>
    <string name="accept_button_text">Aceptar</string>
    <string name="change_pattern_checkbox">Cambiar patrón</string>
    <string name="change_pattern_text">Cambiar patrón</string>

    <string name="back_to_login_button_text">Volver</string>
    <string name="login">Login</string>
    <string name="sin_aliento">Sin Aliento</string>
    <string-array name="spinnerCommission">
        <item>Mercury</item>
        <item>Venus</item>
        <item>Earth</item>
        <item>Mars</item>
        <item>Jupiter</item>
        <item>Saturn</item>
        <item>Uranus</item>
        <item>Neptune</item>
    </string-array>

    <string name="join_text">¿Todavía no sos parte de Sin Aliento?</string>
    <string name="register_text">Registrate</string>
    <string name="password_hint">Password</string>
    <string name="email_hint">Email</string>
    <string name="x_respiration_hint">Respiración en X</string>
    <string name="y_respiration_hint">Respiración en Y</string>
    <string name="z_respiration_hint">Respiración en Z</string>
    <string name="logout_button_text">Cerrar sesión</string>
    <string name="control_respiration_button_text">Controlar respiración</string>
    <string name="commission_number_hint">Número de Comisión</string>
    <string name="group_number_hint">Número de Grupo</string>
    <string name="dni_hint">DNI</string>
    <string name="surname_hint">Apellido</string>
    <string name="name_hint">Nombre</string>
    <string name="accept_register_text">Registrar</string>
    <string name="close_application_alert">Toque de nuevo para cerrar la aplicación</string>
    <string name="apiURL">http://so-unlam.net.ar/api/</string>
    <string name="environment">PROD</string>
    <string name="proximity_type_event">Medición de sensor de proximidad</string>
    <string name="value_description">Valor:\u0020</string>
    <string name="gyroscope_type_event">Medición de giroscopio</string>
    <string name="x_value_description">Valor X:\u0020</string>
    <string name="y_value_description">, Valor Y:\u0020</string>
    <string name="z_value_description">, Valor Z:\u0020</string>
    <string name="unsuccessful_refresh_token_text">No se pudo actualizar el token</string>
    <string name="unobtained_x_value_text">No se puede obtener el valor en X</string>
    <string name="unobtained_y_value_text">No se puede obtener el valor en Y</string>
    <string name="unobtained_z_value_text">No se puede obtener el valor en Z</string>
    <string name="ambulance_alert_text">Se ha enviado una ambulancia a su ubicación</string>
    <string name="proximity_text">Proximidad:\u0020</string>
    <string name="finished_session_text">Sesión finalizada</string>
    <string name="phone_should_be_closer_text">Debe aproximar el celular</string>
    <string name="changed_pattern_text">Patrón guardado</string>
    <string name="created_pattern_text">Patrón guardado con éxito</string>
    <string name="login_dialog_title">Login</string>
    <string name="login_dialog_message">Iniciando sesión</string>
    <string name="email_error_login_text">Debe ingresar un email</string>
    <string name="unvalid_email_error_login_text">Debe ingresar un email válido</string>
    <string name="password_error_email_text">Debe ingresar una contraseña</string>
    <string name="started_session_text">Sesión iniciada</string>
    <string name="unstarted_session_text">No se pudo iniciar sesión</string>
    <string name="no_internet_conection_text">No hay conexión a internet</string>
    <string name="unregister_text">No pudo realizarse el registro</string>
    <string name="correct_pattern_text">Patrón ingresado correctamente</string>
    <string name="wrong_pattern_text">Patrón incorrecto</string>
    <string name="battery_level_text">Batería:\u0020</string>
    <string name="empty_dni_register_error">Debe ingresar un DNI</string>
    <string name="empty_name_register_error">Debe ingresar un nombre</string>
    <string name="unvalid_name_register_error">Debe ingresar un nombre válido</string>
    <string name="empty_last_name_register_error">Debe ingresar un apellido</string>
    <string name="unvalid_last_name_register_error">Debe ingresar un apellido válido</string>
    <string name="empty_email_register_error">Debe ingresar un email</string>
    <string name="unvalid_email_register_error">Debe ingresar un email válido</string>
    <string name="empty_password_register_error">Debe ingresar una contraseña</string>
    <string name="empty_group_number_register_error">Debe ingresar un número de grupo</string>
    <string name="empty_commission_number_register_error">Debe ingresar un número de comisión</string>
    <string name="unvalid_commission_number_register_error">Debe ingresar un número de comisión válido (2900 o 3900)</string>
    <string name="login_description">Sesión iniciada:\u0020</string>
    <string name="login_type_event">Inicio de sesión</string>
    <string name="sensor_event_register_switch_text">Registro de eventos de sensor\u0020\u0020</string>
    <string name="email_alert_subject">Alerta Sin Aliento</string>
    <string name="email_alert_text">Dejó de respirar el usuario\u0020</string>
    <string name="email_chooser_title">Enviar email usando…</string>
    <string name="email_chooser_not_install_exception">No hay instalados clientes de correo.</string>
    <string name="generate_alert_text">Generar alerta</string>
    <string name="configure_alert_text">Configurar alerta</string>
    <string name="delete_additional_email_text">Borrar</string>
    <string name="additional_email_switch_text">Habilitar envío de correo adicional\u0020\u0020</string>
    <string name="save_alert_configuration_text">Guardar</string>
    <string name="cancel_alert_configuration_text">Cancelar</string>
    <string name="email_switch_text">Habilitar envío de correo\u0020\u0020</string>
    <string name="email_textview_text">Tu correo</string>
    <string name="additional_email_default_hint">Email adicional</string>
    <string name="stored_additional_email_text">Email adicional almacenado</string>
    <string name="unvalid_additional_email_text">Email adicional no válido</string>
    <string name="save_configuration_toast_text">Configuración guardada</string>
    <string name="delete_additional_email_toast_text">Email adicional borrado</string>
    <string name="close_session_alert">Toque de nuevo para cerrar sesión</string>
    <string name="enable_phone_switch">Habilitar envío de SMS al celular\u0020\u0020</string>
    <string name="delete_phone_text">Borrar</string>
    <string name="phone_default_hint">Celular (+541123456789)</string>
    <string name="stored_phone_text">Celular almacenado</string>
    <string name="unvalid_phone_text">Celular no válido</string>
    <string name="delete_phone_toast_text">Celular borrado</string>
    <string name="finished_sms_execution_toast_text">Finalizada ejecución de SMS</string>
    <string name="finished_email_execution_toast_text">Finalizada ejecución de Email</string>
    <string name="phone_alert_text">Dejó de respirar el usuario\u0020</string>
    <string name="not_enabled_alert_toast_text">Ningún mensaje de alerta está habilitado</string>
    <string name="enable_beep_switch">Habilitar señal sonora\u0020\u0020</string>
    <string name="not_enabled_beep_toast_text">La señal sonora no está habilitada</string>
    <string name="control_respiration_textview_text"><u>Controlar respiración:</u> permite usar el giroscopio para obtener información de la respiración. Es necesario acercarse el celular al cuerpo para que el sensor de proximidad lo detecte y el giroscopio pueda medir.</string>
    <string name="configure_alert_textview_text"><u>Configurar alerta:</u> permite habilitar las distintas opciones de alerta como activar una señal sonora, enviar un SMS o un correo electrónico.</string>
    <string name="generate_alert_textview_text"><u>Generar alerta:</u> simula las señales de alerta configuradas.</string>
    <string name="back_to_app_button_text">Volver</string>
    <string name="help_button_text">Ayuda</string>
    <string name="proximity_hint">Proximidad</string>
    <string name="proximity_value_text">Proximidad:\u0020</string>
    <string name="register_completed_toast_text">Registro finalizado correctamente</string>
    <string name="event_shared_preferences_name">event_prefs</string>
    <string name="event_list_textview_text">Listado de eventos</string>
    <string name="gyroscope_values_text">Giroscopio:\u0020</string>
    <string name="gyroscope_x_value_text">x=</string>
    <string name="gyroscope_y_value_text">, y=</string>
    <string name="gyroscope_z_value_text">, z=</string>
    <string name="failed_sms_execution_toast_text">Falló el envío del SMS</string>
    <string name="event_list_button_text">Listado de eventos</string>
</resources>
